fixed post title line wrapping

--- a/picture_shop/picture_shop/static/css/style.css
+++ b/picture_shop/picture_shop/static/css/style.css
@@ -4226,6 +4226,10 @@ html.desktop[data-x-mode="true"] .post-grid .post-author .author-media+.author-n
 	font-size: 16px;
 }
 
+.post-item .post-title a {
+	white-space: normal;
+}
+
 .post-recent .time {
 	font-size: 14px;
 	color: #9e9ea0;
